新增共享库功能